--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -3,6 +3,6 @@ body {
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' viewBox='0 0 100 100'%3E%3Crect x='0' y='0' width='4' height='4' fill-opacity='0.6' fill='%2344FBFF'/%3E%3C/svg%3E");
 }
 
-.test {
+.full {
     margin: 100px;
 }
